Correction mobile

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -106,7 +106,7 @@ section {
 .section__container{
     max-width: 1200px;
     margin: auto;
-    padding: 0 2rem;
+    padding: 0 .5rem;
 }
 
 .section__container--center{
